opc_buffer_20ms_variable
